--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "swiper": "^6.5.4",
     "utils": "^0.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "wiper": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^5.0.0"
   }
 }
