--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/chart.js": "^2.9.32",
     "axios": "^0.21.1",
     "chart.js": "^3.1.0",
+    "classnames": "^2.3.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
